--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,8 @@ version = "1.1.1"
 description = "Use LLM to generate commands for your shell"
 readme = "README.md"
 authors = [{name = "Ryan Patterson"}]
-license = {text = "Apache-2.0"}
-classifiers = [
-    "License :: OSI Approved :: Apache Software License"
-]
+license = "Apache-2.0"
+license-files = ["LICENSE"]
 dependencies = [
     "llm",
     "prompt_toolkit>=3.0.43",
@@ -20,3 +18,9 @@ Issues = "https://github.com/CGamesPlay/llm-cmd-comp/issues"
 
 [project.entry-points.llm]
 cmdcomp = "llm_cmd_comp"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+llm_cmd_comp = ["share/*"]
